--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,5 @@
+/* HEADER & logo*/
+
 .header {
   padding-top: 2rem;
   padding-bottom: 1.5rem;
@@ -14,14 +16,28 @@
   width: 3.5rem;
 }
 
+/* HERO SECTION */
+
+.section-hero {
+  padding-top: 7.5rem;
+}
+
 .heading-primary-dark {
   color: #343a40;
   font-weight: 600;
   font-size: 3.125rem;
+  line-height: 1.3;
+  margin-bottom: 1rem;
 }
 
 .heading-primary-light {
   color: #0ca678;
   font-weight: 700;
   font-size: 3.125rem;
+}
+
+.heading-primary-paragraph {
+  font-size: 1.6rem;
+  font-weight: 500;
+  color: #495057;
 }
