--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,36 @@
+/*
+FONT SIZES:
+
+
+61.04px	
+48.83px	
+39.06px	
+31.25px	
+25.00px	
+20.00px	
+16.00px	
+12.80px	
+10.24px	
+8.19px	
+
+
+
+VERTICAL SPACING:
+
+2px
+4px
+8px
+12px
+16px
+24px
+32px
+40px
+48px
+64px
+80px
+96px
+*/
+
 /* HEADER & logo*/
 
 .header {
@@ -19,15 +52,17 @@
 /* HERO SECTION */
 
 .section-hero {
-  padding-top: 7.5rem;
+  padding-top: 8rem;
+  padding-bottom: 6.4rem;
 }
 
 .heading-primary-dark {
   color: #343a40;
   font-weight: 600;
   font-size: 3.125rem;
-  line-height: 1.3;
+  line-height: 1.25;
   margin-bottom: 1rem;
+  letter-spacing: 0.25px;
 }
 
 .heading-primary-light {
@@ -40,4 +75,32 @@
   font-size: 1.6rem;
   font-weight: 500;
   color: #495057;
+  letter-spacing: 0.25px;
+  margin-bottom: 2.4rem;
+}
+
+.btn-primary {
+  color: #f4fdfa;
+  background-color: #087f5b;
+  padding: 0.6rem 3rem 0.6rem 3rem;
+  border-radius: 10px;
+  font-size: 2rem;
+  margin-right: 1.6rem;
+  border: 2.5px solid #087f5b;
+}
+
+.btn-secondary {
+  border: 2.5px solid #087f5b;
+  font-size: 2rem;
+  padding: 0.6rem 1.5rem 0.6rem 1.5rem;
+  color: #343a40;
+  border-radius: 10px;
+  margin-bottom: 4.8rem;
+}
+
+.hero-img {
+  display: block;
+  border-radius: 5px;
+  width: 95%;
+  margin: 0 auto;
 }
