--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,24 @@ VERTICAL SPACING:
 .hero-img {
   display: block;
   border-radius: 5px;
-  width: 95%;
-  margin: 0 auto;
+}
+
+/* ABOUT US SECTION */
+
+.section-about {
+  padding-top: 6.4rem;
+  padding-bottom: 6.4rem;
+}
+
+.about-paragraph {
+  font-size: 1.6rem;
+  color: #495057;
+  font-weight: 500;
+  line-height: 1.75;
+}
+
+.about-img {
+  max-width: 100%;
+  border-radius: 5px;
+  margin-bottom: 2.4rem;
 }
