--- a/css/general.css
+++ b/css/general.css
@@ -37,6 +37,18 @@ img {
   background-color: #fff;
 }
 
+.bg-blueish {
+  background-color: #e3fafc;
+}
+
+.p-top-64 {
+  padding-top: 6.4rem;
+}
+
+.p-btm-64 {
+  padding-bottom: 6.4rem;
+}
+
 .subheading {
   color: #099268;
   font-size: 1.28rem;
@@ -47,7 +59,31 @@ img {
   font-size: 2.5rem;
   color: #343a40;
   font-weight: 700;
-  margin-bottom: 3.2rem;
+  margin-bottom: 4rem;
+}
+
+.feature-card-icon {
+  width: 4.5rem;
+  height: 4.5rem;
+}
+
+.feature-card {
+  display: flex;
+  align-items: center;
+  gap: 2.5rem;
+}
+
+.feature-card-heading {
+  font-size: 2rem;
+  font-weight: 600;
+  color: #343a40;
+  margin-bottom: 0.8rem;
+}
+
+.feature-card-description {
+  font-size: 1.6rem;
+  color: #495057;
+  font-weight: 500;
 }
 
 br {
