--- a/css/general.css
+++ b/css/general.css
@@ -71,14 +71,16 @@ img {
 .feature-card {
   display: flex;
   align-items: center;
-  gap: 2.5rem;
+  flex-direction: column;
+  gap: 1.6rem;
+  align-items: flex-start;
 }
 
 .feature-card-heading {
   font-size: 2rem;
   font-weight: 600;
   color: #343a40;
-  margin-bottom: 0.8rem;
+  margin-bottom: 0.4rem;
 }
 
 .feature-card-description {
@@ -114,7 +116,7 @@ br {
 /* POLYFILLS */
 
 .no-flexbox-gap .feature-card .feature-card-icon {
-  margin-right: 2.5rem;
+  margin-bottom: 1.6rem;
 }
 
 .no-flexbox-gap .section-benefits-card .benefit-card-img {
