--- a/css/general.css
+++ b/css/general.css
@@ -50,7 +50,7 @@ img {
 }
 
 .subheading {
-  color: #099268;
+  color: #09825e;
   font-size: 1.28rem;
   font-weight: 600;
 }
@@ -76,14 +76,16 @@ img {
   align-items: flex-start;
 }
 
-.feature-card-heading {
+.feature-card-heading,
+.producing-step-heading {
   font-size: 2rem;
   font-weight: 600;
   color: #343a40;
   margin-bottom: 0.4rem;
 }
 
-.feature-card-description {
+.feature-card-description,
+.producing-step-description {
   font-size: 1.6rem;
   color: #495057;
   font-weight: 500;
@@ -109,6 +111,13 @@ img {
   font-weight: 600;
   color: #343a40;
 }
+
+.producing-step-number {
+  font-size: 3.125rem;
+  font-weight: 700;
+  color: rgba(9, 146, 104, 0.33);
+}
+
 br {
   line-height: 0.1;
 }
