--- a/css/style.css
+++ b/css/style.css
@@ -194,3 +194,13 @@ VERTICAL SPACING:
   font-size: 1.28rem;
   text-align: center;
 }
+
+/* FAQ SECTION */
+
+.heading-faq {
+  font-size: 2.5rem;
+  color: #0a8561;
+  font-weight: 700;
+  margin-bottom: 4rem;
+  line-height: 1.4;
+}
