--- a/css/general.css
+++ b/css/general.css
@@ -151,6 +151,19 @@ img {
   padding-top: 1rem;
 }
 
+.footer-contact {
+  display: flex;
+  gap: 0.6rem;
+  align-items: center;
+  flex-direction: row;
+}
+
+.footer-contact-text {
+  font-size: 1.28rem;
+  color: #495057;
+  font-weight: 500;
+}
+
 br {
   line-height: 0.1;
 }
@@ -168,6 +181,8 @@ br {
 .faq-arrow {
   animation-fill-mode: forwards !important;
 }
+
+/* ANIMATIONS */
 
 @keyframes openAnimation {
   from {
