--- a/css/general.css
+++ b/css/general.css
@@ -45,6 +45,14 @@ img {
   background-color: #343a40;
 }
 
+.p-top-48 {
+  padding-top: 4.8rem;
+}
+
+.p-btm-48 {
+  padding-bottom: 4.8rem;
+}
+
 .p-top-64 {
   padding-top: 6.4rem;
 }
@@ -158,7 +166,7 @@ img {
   flex-direction: row;
 }
 
-.footer-contact-text {
+.footer-text {
   font-size: 1.28rem;
   color: #495057;
   font-weight: 500;
