--- a/css/general.css
+++ b/css/general.css
@@ -6,12 +6,14 @@
 
 html {
   font-size: 62.5%;
+  scroll-behavior: smooth;
 }
 
 body {
   overflow-x: hidden;
   font-family: "Poppins", sans-serif;
   color: #495057;
+  overflow-x: hidden;
 }
 
 a {
@@ -174,6 +176,10 @@ img {
 
 br {
   line-height: 0.1;
+}
+
+ul {
+  list-style-type: none;
 }
 
 /* POLYFILLS */
