--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,84 @@ VERTICAL SPACING:
   width: 3.5rem;
 }
 
+.nav {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+/* NAVIGATION LINKS (INSIDE HEADER) */
+
+.navigation-links-container {
+  transition: all 0.2s linear;
+  position: absolute;
+  left: 2rem;
+  right: 2rem;
+  top: 2rem;
+  border-radius: 10px;
+  background-color: #fff;
+  padding-top: 4.8rem;
+  padding-bottom: 4.8rem;
+}
+
+.navigation-links-container.visible {
+  transform: scale(1);
+  opacity: 1;
+}
+
+.navigation-links-container.hidden {
+  transform: scale(0.75);
+  z-index: -1;
+  opacity: 0;
+}
+
+.navigation-links {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.navigation-link-anchor {
+  font-size: 2rem;
+  color: #343a40;
+  font-weight: 500;
+}
+
+.close-button {
+  border: none;
+  background: none;
+  z-index: 1;
+  position: absolute;
+  right: 15px;
+  top: 15px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
+.close-button img {
+  width: 100%;
+}
+
+.navigation-link:not(:last-of-type) {
+  margin-bottom: 2.4rem;
+}
+
+.navigation-link-cta {
+  background-color: #087f5b;
+  width: 80%;
+  padding: 0.8rem 1.6rem;
+  border-radius: 5px;
+}
+
+.navigation-link-cta a {
+  color: #fff;
+  text-align: center;
+  display: block;
+}
 /* HERO SECTION */
 
 .section-hero {
