--- a/css/queries.css
+++ b/css/queries.css
@@ -87,4 +87,41 @@
   .navigation-links-container {
     display: none;
   }
+
+  .navigation-links-desktop {
+    display: flex;
+  }
+
+  .section-hero {
+    display: flex;
+    align-items: flex-start;
+    gap: 2.4rem;
+  }
+
+  .hero-img-container {
+    flex: 1 1 0;
+  }
+  .hero-text-container {
+    flex: 1 1 0;
+  }
+  .header {
+    padding-top: 2.4rem;
+  }
+  .logo {
+    width: 14rem;
+  }
+
+  .about-flex {
+    display: flex;
+    gap: 2.4rem;
+  }
+
+  .about-img-container {
+    max-width: 100%;
+    flex: 1 1 0px;
+  }
+
+  .about-paragraph {
+    flex: 1 1 0px;
+  }
 }
