--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ VERTICAL SPACING:
 }
 
 .navigation-links-desktop {
-  display: flex;
+  display: none;
   flex-direction: row;
   gap: 2.4rem;
   align-items: center;
@@ -143,7 +143,7 @@ VERTICAL SPACING:
 
 .navigation-link-cta-desktop a {
   background-color: #087f5b;
-  padding: 0.8rem 1.6rem;
+  padding: 0.8rem 2.4rem;
   color: #fff;
   border-radius: 5px;
 }
