--- a/css/general.css
+++ b/css/general.css
@@ -212,6 +212,32 @@ ul {
   animation-fill-mode: forwards !important;
 }
 
+.navigation-link-anchor-desktop:hover,
+.navigation-link-anchor:hover {
+  color: #087f5b;
+}
+
+.navigation-link-cta,
+.navigation-link-anchor-desktop,
+.btn-primary,
+.btn-secondary {
+  transition: all 0.15s linear;
+}
+
+.navigation-link-cta:hover,
+.navigation-link-cta-desktop .navigation-link-anchor-desktop:hover,
+.btn-primary:hover {
+  background-color: #0ca678;
+  border-color: #0ca678;
+  color: #f4fdfa;
+}
+
+.btn-secondary:hover {
+  background-color: #087f5b;
+  border-color: #087f5b;
+  color: #f4fdfa;
+}
+
 /* ANIMATIONS */
 
 @keyframes openAnimation {
