--- a/css/general.css
+++ b/css/general.css
@@ -170,6 +170,7 @@ img {
   line-height: 1.4;
   border-radius: 6px;
   animation-fill-mode: forwards !important;
+  transition: background-color 0.2s;
 }
 
 .faq-answer {
