--- a/css/style.css
+++ b/css/style.css
@@ -287,13 +287,14 @@ header .max-width-container {
   background-color: #63d9b6;
   width: 100%;
   text-align: center;
-  padding-top: 0.8rem;
-  padding-bottom: 0.8rem;
+  padding-top: 1.2rem;
+  padding-bottom: 1.2rem;
   border-radius: 5px;
   font-size: 2.5rem;
   color: #1b5c49;
   font-weight: 600;
   margin-bottom: 1.2rem;
+  border: none;
 }
 
 .order-info {
