--- a/css/checkout.css
+++ b/css/checkout.css
@@ -28,6 +28,83 @@ button:hover {
   -webkit-tap-highlight-color: transparent;
 }
 
+.spinner.hidden,
+.spinner-total-price.hidden {
+  display: none;
+  position: relative;
+  transform-origin: center center;
+}
+.spinner {
+  display: block;
+  position: relative;
+  width: 100px;
+  height: 100px;
+  margin: 6rem auto;
+  animation: spinner-rotation 1s infinite;
+}
+
+.spinner-total-price {
+  display: block;
+  position: relative;
+  width: 18px;
+  height: 18px;
+  animation: spinner-rotation 1s infinite;
+}
+
+.spinner-total-price::before {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  width: 18px;
+  height: 18px;
+  border: 2px solid #e6e6e6;
+  top: 0;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.spinner-total-price::after {
+  content: "";
+  position: absolute;
+  color: #087f5b;
+  left: 50%;
+  top: 50%;
+  width: 18px;
+  height: 18px;
+  border-radius: 50%;
+  border: 2px solid #e6e6e6;
+  border-top-color: #0ca678;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.spinner::before {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  border: 10px solid #e6e6e6;
+  top: 0;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+}
+
+.spinner::after {
+  content: "";
+  position: absolute;
+  color: #087f5b;
+  left: 50%;
+  top: 50%;
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  border: 10px solid #e6e6e6;
+  border-top-color: #0ca678;
+  transform: translateX(-50%) translateY(-50%);
+}
+
 .outer-container {
   width: 100%;
   padding-left: 2.5rem;
@@ -55,6 +132,7 @@ section.outer-container {
 }
 
 .btn-order-2 {
+  margin-top: 1.8rem;
   display: block;
 }
 /* HEADER */
@@ -65,9 +143,16 @@ header {
   padding-bottom: 1.8rem;
   width: 100%;
 }
+
+header .max-width-container {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
 .btn-back {
   background: none;
   border: none;
+  margin-right: 1.8rem;
 }
 
 .heading-primary {
@@ -108,6 +193,18 @@ td.ow_td:first-of-type {
 
 table.ow_table {
   padding: 0;
+}
+input,
+select,
+#omniva_select2 {
+  transition: all 0.15s;
+}
+input:focus,
+select:focus,
+#omniva_select2:focus {
+  box-shadow: 0 0 2px 3px rgba(99, 217, 182, 0.57);
+  outline: none;
+  transition: all 0.15s;
 }
 
 /* CART SECTION */
@@ -230,10 +327,38 @@ table.ow_table {
   border: none;
   border-radius: 5px;
   transition: all 0.25s;
+  position: relative;
+}
+.climate-text-container {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.climate-text-container .img-container {
+  width: 3rem;
+  margin-right: 0.6rem;
+  display: flex;
+  align-items: center;
+}
+
+.climate-text {
+  font-size: 1.28rem;
+  font-weight: 600;
+  color: #495057;
 }
 
 .btn-order-1:hover,
 .btn-order-2:hover {
   color: #fff;
   background-color: #087f5b;
+}
+
+@keyframes spinner-rotation {
+  from {
+    transform: rotateZ(0deg);
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
 }
