--- a/css/general.css
+++ b/css/general.css
@@ -7,6 +7,7 @@
 html {
   font-size: 62.5%;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -163,6 +164,7 @@ img {
   font-size: 3.125rem;
   font-weight: 700;
   color: rgba(9, 146, 104, 0.33);
+  margin-bottom: 0.2rem;
 }
 
 .faq-question {
@@ -197,14 +199,19 @@ img {
 
 .footer-contact {
   display: flex;
-  gap: 0.4rem;
+  gap: 0.6rem;
   align-items: center;
   flex-direction: row;
 }
 
+.footer-contact-icon {
+  width: 22px;
+  height: 22px;
+}
+
 .no-flexbox-gap .footer-contact-icon {
   /* POLYFILL FOR THE GAP PROPERTY ABOVE */
-  margin-right: 0.4rem;
+  margin-right: 0.6rem;
 }
 
 .footer-text {
